// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`OfflineIcon renders correctly 1`] = `
{
  "$$typeof": Symbol(react.test.json),
  "children": [
    {
      "$$typeof": Symbol(react.test.json),
      "children": null,
      "props": {
        "d": "M28.5 18c0 7.456-6.044 13.5-13.5 13.5S1.5 25.456 1.5 18 7.544 4.5 15 4.5 28.5 10.544 28.5 18Z",
        "fill": "#2B6072",
        "stroke": "#fff",
        "strokeWidth": 3,
      },
      "type": "Path",
    },
    {
      "$$typeof": Symbol(react.test.json),
      "children": null,
      "props": {
        "d": "M24.5 18a9.5 9.5 0 1 1-19 0 9.5 9.5 0 0 1 19 0Z",
        "fill": "#fff",
        "stroke": "#949494",
        "strokeWidth": 5,
      },
      "type": "Path",
    },
  ],
  "props": {
    "fill": "none",
    "height": 33,
    "width": 30,
  },
  "type": "Svg",
}
`;

exports[`OfflineIcon renders with doNotDisturb indicator 1`] = `
{
  "$$typeof": Symbol(react.test.json),
  "children": [
    {
      "$$typeof": Symbol(react.test.json),
      "children": null,
      "props": {
        "d": "M28.5 18c0 7.456-6.044 13.5-13.5 13.5S1.5 25.456 1.5 18 7.544 4.5 15 4.5 28.5 10.544 28.5 18Z",
        "fill": "#2B6072",
        "stroke": "#fff",
        "strokeWidth": 3,
      },
      "type": "Path",
    },
    {
      "$$typeof": Symbol(react.test.json),
      "children": null,
      "props": {
        "d": "M24.5 18a9.5 9.5 0 1 1-19 0 9.5 9.5 0 0 1 19 0Z",
        "fill": "#fff",
        "stroke": "#949494",
        "strokeWidth": 5,
      },
      "type": "Path",
    },
    {
      "$$typeof": Symbol(react.test.json),
      "children": null,
      "props": {
        "d": "M18 4h8l-8 6.857h8",
        "stroke": "#fff",
        "strokeLinecap": "round",
        "strokeLinejoin": "round",
        "strokeWidth": 8,
      },
      "type": "Path",
    },
    {
      "$$typeof": Symbol(react.test.json),
      "children": null,
      "props": {
        "d": "M18 4h8l-8 6.857h8",
        "stroke": "#949494",
        "strokeLinecap": "round",
        "strokeLinejoin": "round",
        "strokeWidth": 3,
      },
      "type": "Path",
    },
  ],
  "props": {
    "fill": "none",
    "height": 33,
    "width": 30,
  },
  "type": "Svg",
}
`;

exports[`OfflineIcon accepts custom props 1`] = `
{
  "$$typeof": Symbol(react.test.json),
  "children": [
    {
      "$$typeof": Symbol(react.test.json),
      "children": null,
      "props": {
        "d": "M28.5 18c0 7.456-6.044 13.5-13.5 13.5S1.5 25.456 1.5 18 7.544 4.5 15 4.5 28.5 10.544 28.5 18Z",
        "fill": "#2B6072",
        "stroke": "#fff",
        "strokeWidth": 3,
      },
      "type": "Path",
    },
    {
      "$$typeof": Symbol(react.test.json),
      "children": null,
      "props": {
        "d": "M24.5 18a9.5 9.5 0 1 1-19 0 9.5 9.5 0 0 1 19 0Z",
        "fill": "#fff",
        "stroke": "#949494",
        "strokeWidth": 5,
      },
      "type": "Path",
    },
  ],
  "props": {
    "fill": "none",
    "height": 50,
    "width": 45,
  },
  "type": "Svg",
}
`;
